--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -31,9 +31,9 @@
 %	Each of the commands can be cited anywhere in the thesis
 %----------------------------------------------------------------------------------------
 
-% Remove drafting to get rid of the '[ Date - classicthesis version 4.0 ]' text at the bottom of every page
-\PassOptionsToPackage{eulerchapternumbers,listings,drafting, pdfspacing, subfig,beramono,eulermath,parts}{classicthesis}
+\PassOptionsToPackage{eulerchapternumbers,listings,drafting,subfig,beramono,eulermath,parts}{classicthesis}
 % Available options: drafting parts nochapters linedheaders eulerchapternumbers beramono eulermath pdfspacing minionprospacing tocaligned dottedtoc manychapters listings floatperchapter subfig
+% Might want to turn of xelatex and re-enable pdfspacing
 
 \newcommand{\myTitle}{A Search for Long-Lived, Charged, Supersymmetric Particles using Ionization with the ATLAS Detector\xspace}
 \newcommand{\mySubtitle}{Subtitle\xspace}
@@ -132,7 +132,7 @@ natbib=true % natbib compatibility mode (\citep and \citet still work)
 
 %------------------------------------------------
 
-\PassOptionsToPackage{pdftex}{graphicx}
+%\PassOptionsToPackage{pdftex}{graphicx}
 \usepackage{graphicx} 
 
 %----------------------------------------------------------------------------------------
@@ -175,10 +175,11 @@ belowcaptionskip=.75\baselineskip % Space after the "Listing #: Desciption" text
 %	HYPERREFERENCES
 %----------------------------------------------------------------------------------------
 
-\PassOptionsToPackage{pdftex,hyperfootnotes=false,pdfpagelabels}{hyperref}
+%\PassOptionsToPackage{pdftex,hyperfootnotes=false,pdfpagelabels}{hyperref}
+\PassOptionsToPackage{hyperfootnotes=false,pdfpagelabels}{hyperref}
 \usepackage{hyperref}  % backref linktocpage pagebackref
-\pdfcompresslevel=9
-\pdfadjustspacing=1
+%\pdfcompresslevel=9
+%\pdfadjustspacing=1
 
 \hypersetup{
 % Uncomment the line below to remove all links (to references, figures, tables, etc), useful for b/w printouts
@@ -250,6 +251,11 @@ pdfproducer={LaTeX with hyperref and classicthesis}
 %----------------------------------------------------------------------------------------
 %	USING DIFFERENT FONTS
 %----------------------------------------------------------------------------------------
+
+% Customization for xelatex
+\usepackage{mathspec}
+\setallmainfonts(Digits,Latin,Greek)[Path = fonts/, UprightFont=LibreBaskerville-Regular, BoldFont={LibreBaskerville-Bold}, ItalicFont={LibreBaskerville-Italic}, SmallCapsFont={LibreBaskerville-Smallcaps}]{LibreBaskerville}
+
 
 %\usepackage[oldstylenums]{kpfonts} % oldstyle notextcomp
 %\usepackage[osf]{libertine}
