--- a/classicthesis.sty
+++ b/classicthesis.sty
@@ -336,7 +336,8 @@
             \RequirePackage{soul} % for letterspacing 
                 \sodef\allcapsspacing{\upshape}{0.15em}{0.65em}{0.6em}%
                 \sodef\lowsmallcapsspacing{\scshape}{0.075em}{0.5em}{0.6em}%   
-                \DeclareRobustCommand{\spacedallcaps}[1]{\MakeTextUppercase{\allcapsspacing{#1}}}%   
+                \DeclareRobustCommand{\spacedallcaps}[1]{\MakeTextUppercase{\allcapsspacing{#1}}}%
+                %\DeclareRobustCommand{\spacedlowsmallcaps}[1]{\MakeTextUppercase{\allcapsspacing{#1}}}%
                 \DeclareRobustCommand{\spacedlowsmallcaps}[1]{\MakeTextLowercase{\textsc{\lowsmallcapsspacing{#1}}}}%\protect
         }%
     }
