Updated color scheme.

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -157,7 +157,7 @@ natbib=true % natbib compatibility mode (\citep and \citet still work)
 %\lstset{emph={trueIndex,root},emphstyle=\color{BlueViolet}}%\underbar} % For special keywords
 \lstset{language=[LaTeX]Tex,%C++ % Specify the language(s) for listings here
 morekeywords={PassOptionsToPackage,selectlanguage},
-keywordstyle=\color{RoyalBlue}, % Add \bfseries for bold
+keywordstyle=\color{highlight}, % Add \bfseries for bold
 basicstyle=\small\ttfamily, % Makes listings a smaller font size and a different font
 %identifierstyle=\color{NavyBlue}, % Color of text inside brackets
 commentstyle=\color{Green}\ttfamily, % Color of comments
@@ -192,7 +192,7 @@ colorlinks=true, linktocpage=true, pdfstartpage=3, pdfstartview=FitV,
 breaklinks=true, pdfpagemode=UseNone, pageanchor=true, pdfpagemode=UseOutlines,%
 plainpages=false, bookmarksnumbered, bookmarksopen=true, bookmarksopenlevel=1,%
 hypertexnames=true, pdfhighlight=/O,%nesting=true,%frenchlinks,%
-urlcolor=webbrown, linkcolor=RoyalBlue, citecolor=webgreen, %pagecolor=RoyalBlue,%
+urlcolor=highlight, linkcolor=highlight, citecolor=highlight, %pagecolor=RoyalBlue,%
     %urlcolor=Black, linkcolor=Black, citecolor=Black, %pagecolor=Black,%
 %------------------------------------------------
 % PDF file meta-information
