--- a/frontback/Titlepage.tex
+++ b/frontback/Titlepage.tex
@@ -10,7 +10,7 @@
 \vfill
 
 \begingroup
-\color{RoyalBlue}\spacedallcaps{\myTitle} \\ \bigskip % Thesis title
+\color{title}\spacedallcaps{\myTitle} \\ \bigskip % Thesis title
 \endgroup
 
 \spacedlowsmallcaps{\myName} % Your name
