Enabled many chapters option to accomodate all chapters in outline.

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -32,7 +32,7 @@
 %	Each of the commands can be cited anywhere in the thesis
 %----------------------------------------------------------------------------------------
 
-\PassOptionsToPackage{eulerchapternumbers,listings,drafting,subfig,beramono,parts}{classicthesis}
+\PassOptionsToPackage{eulerchapternumbers,listings,drafting,subfig,beramono,parts,manychapters}{classicthesis}
 % Available options: drafting parts nochapters linedheaders eulerchapternumbers beramono eulermath pdfspacing minionprospacing tocaligned dottedtoc manychapters listings floatperchapter subfig
 % Might want to turn of xelatex and re-enable pdfspacing
 
