Moved from small caps crimson to all caps julius sans for all headings.

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -143,7 +143,7 @@ natbib=true % natbib compatibility mode (\citep and \citet still work)
 
 \usepackage{tabularx} % Better tables
 \setlength{\extrarowheight}{3pt} % Increase table row height
-\newcommand{\tableheadline}[1]{\multicolumn{1}{c}{\spacedlowsmallcaps{#1}}}
+\newcommand{\tableheadline}[1]{\multicolumn{1}{c}{\spacedallcaps{#1}}}
 \newcommand{\myfloatalign}{\centering} % To be used with each float for alignment
 \usepackage{caption}
 \captionsetup{font=small}
@@ -259,6 +259,10 @@ pdfproducer={LaTeX with hyperref and classicthesis}
 \usepackage{fontspec}
 \usepackage{crimson}
 \usepackage{MnSymbol}
+
+% Montserrat or Julius Sans One for headings
+%\setsansfont[Ligatures=TeX,Scale=MatchLowercase,Path=fonts/,UprightFont=*-Regular,BoldFont=*-Bold]{Montserrat}
+\setsansfont[Ligatures=TeX,Scale=MatchLowercase,Path=fonts/,UprightFont=*-Regular]{JuliusSansOne}
 
 %\usepackage[oldstylenums]{kpfonts} % oldstyle notextcomp
 %\usepackage[osf]{libertine}
