--- a/frontback/Bibliography.tex
+++ b/frontback/Bibliography.tex
@@ -3,7 +3,7 @@
 \label{app:bibliography} % Reference the bibliography elsewhere with \autoref{app:bibliography}
 
 \manualmark % Work-around to have small caps also here in the headline
-\markboth{\spacedlowsmallcaps{\bibname}}{\spacedlowsmallcaps{\bibname}} % Work-around to have small caps also
+\markboth{\spacedallcaps{\bibname}}{\spacedallcaps{\bibname}} % Work-around to have small caps also
 %\phantomsection
 \refstepcounter{dummy}
 
