--- a/frontback/Titleback.tex
+++ b/frontback/Titleback.tex
@@ -13,17 +13,17 @@
 
 %\bigskip
 
-%\noindent\spacedlowsmallcaps{Supervisors}: \\
+%\noindent\spacedallcaps{Supervisors}: \\
 %\myProf \\
 %\myOtherProf \\ 
 %\mySupervisor
 
 %\medskip \\
 
-%\noindent\spacedlowsmallcaps{Location}: \\
+%\noindent\spacedallcaps{Location}: \\
 %\myLocation
 
 %\medskip \\
 
-%\noindent\spacedlowsmallcaps{Time Frame}: \\
+%\noindent\spacedallcaps{Time Frame}: \\
 %\myTime
