--- a/frontback/Titlepage.tex
+++ b/frontback/Titlepage.tex
@@ -13,7 +13,7 @@
 \color{title}\spacedallcaps{\myTitle} \\ \bigskip % Thesis title
 \endgroup
 
-\spacedlowsmallcaps{\myName} % Your name
+\spacedallcaps{\myName} % Your name
 
 \vfill
 
