Tuned font size and spacing for table of contents and section headings.

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -262,7 +262,7 @@ pdfproducer={LaTeX with hyperref and classicthesis}
 
 % Montserrat or Julius Sans One for headings
 %\setsansfont[Ligatures=TeX,Scale=MatchLowercase,Path=fonts/,UprightFont=*-Regular,BoldFont=*-Bold]{Montserrat}
-\setsansfont[Ligatures=TeX,Scale=MatchLowercase,Path=fonts/,UprightFont=*-Regular]{JuliusSansOne}
+\setsansfont[Ligatures=TeX,Scale=0.82,Path=fonts/,UprightFont=*-Regular]{JuliusSansOne}
 
 %\usepackage[oldstylenums]{kpfonts} % oldstyle notextcomp
 %\usepackage[osf]{libertine}
