--- a/classicthesis.sty
+++ b/classicthesis.sty
@@ -333,7 +333,11 @@
             \DeclareRobustCommand{\spacedallcaps}[1]{\textls[160]{\MakeTextUppercase{#1}}}%
             \DeclareRobustCommand{\spacedallcaps}[1]{\textls[80]{\scshape\MakeTextLowercase{#1}}}%
         }{%
-          \DeclareRobustCommand{\spacedallcaps}[1]{\addfontfeatures{LetterSpace=7.5}\textsf{\MakeTextUppercase{#1}}}%          
+          \PackageInfo{classicthesis}{Using soul package to space all caps.}
+          %\RequirePackage{soul} % for letterspacing
+          %\sodef\allcapsspacing{\upshape\sffamily}{0.1em}{0.5em}{0.5em}%
+          %\DeclareRobustCommand{\spacedallcaps}[1]{\MakeTextUppercase{\allcapsspacing{#1}}}%
+          \DeclareRobustCommand{\spacedallcaps}[1]{\MakeTextUppercase{\textsf{#1}}}%
         }%
     }
 
