--- a/frontback/Titlepage.tex
+++ b/frontback/Titlepage.tex
@@ -10,7 +10,7 @@
 \vfill
 
 \begingroup
-\color{title}\spacedallcaps{\myTitle} \\ \bigskip % Thesis title
+\color{title}\Large\spacedallcaps{\myTitle} \\ \bigskip % Thesis title
 \endgroup
 
 \spacedallcaps{\myName} % Your name
