Fixed a few issues in table of contents.

--- a/classicthesis.sty
+++ b/classicthesis.sty
@@ -466,7 +466,7 @@
     \ifthenelse{\boolean{@nochapters}}%
         {\relax}%
         {%
-                        \renewcommand{\cftchappresnum}{\scshape\MakeTextLowercase}%
+            \renewcommand{\cftchappresnum}{\sffamily}%
             \renewcommand{\cftchapfont}{\normalfont}%
             \renewcommand{\cftchappagefont}{\normalfont}%
             \ifthenelse{\boolean{@dottedtoc}}{\relax}%
@@ -483,7 +483,7 @@
           \setlength{\beforebibskip}{1em}%
       }%
       {\relax}
-        \renewcommand{\cftsecpresnum}{\scshape\MakeTextLowercase}%
+      %\renewcommand{\cftsecpresnum}{\sffamil}%
         \renewcommand{\cftsecfont}{\normalfont}%
       \renewcommand{\cftsecpagefont}{\normalfont}%
         \ifthenelse{\boolean{@dottedtoc}}{\relax}%
@@ -493,7 +493,7 @@
       }
       \ifthenelse{\boolean{@tocaligned}}{\renewcommand{\cftsecindent}{0em}}{\relax}
     % subsections
-        \renewcommand{\cftsubsecpresnum}{\scshape\MakeTextLowercase}%
+        %\renewcommand{\cftsubsecpresnum}{\spacedallcaps}%
         \renewcommand{\cftsubsecfont}{\normalfont}%
       \ifthenelse{\boolean{@dottedtoc}}{\relax}%
       {%      
@@ -502,7 +502,7 @@
       }             
       \ifthenelse{\boolean{@tocaligned}}{\renewcommand{\cftsubsecindent}{0em}}{\relax}
     % subsubsections
-        \renewcommand{\cftsubsubsecpresnum}{\scshape\MakeTextLowercase}%
+        %\renewcommand{\cftsubsubsecpresnum}{\spacedallcaps}%
         \renewcommand{\cftsubsubsecfont}{\normalfont}%
       \ifthenelse{\boolean{@dottedtoc}}{\relax}%
       {%      
@@ -511,7 +511,7 @@
       }             
       \ifthenelse{\boolean{@tocaligned}}{\renewcommand{\cftsubsubsecindent}{0em}}{\relax}
     % figures     
-        \renewcommand{\cftfigpresnum}{\scshape\MakeTextLowercase}% 
+        %\renewcommand{\cftfigpresnum}{\spacedallcaps}% 
         \renewcommand{\cftfigfont}{\normalfont}%                 
       \ifthenelse{\boolean{@dottedtoc}}{\relax}%
       {%
@@ -524,7 +524,7 @@
       \addtolength{\figurelabelwidth}{2.5em}
       \cftsetindents{figure}{0em}{\figurelabelwidth}
     % tables
-        \renewcommand{\cfttabpresnum}{\scshape\MakeTextLowercase}%
+        \renewcommand{\cfttabpresnum}{\spacedallcaps}%
         \renewcommand{\cfttabfont}{\normalfont}%
             \ifthenelse{\boolean{@dottedtoc}}{\relax}%
       {%
@@ -541,7 +541,7 @@
     \ifthenelse{\boolean{@listings}}%        
     {%
         \newlistof{listings}{lol}{\lstlistlistingname}%
-            \renewcommand{\cftlistingspresnum}{\scshape\MakeTextLowercase}%
+            %\renewcommand{\cftlistingspresnum}{\spacedallcaps}%
             \renewcommand{\cftlistingsfont}{\normalfont}%
             \renewcommand{\cftlistingspresnum}{\lstlistingname~}%
             \renewcommand{\cftlistingspagefont}{\normalfont}%
