--- a/frontback/Contents.tex
+++ b/frontback/Contents.tex
@@ -74,15 +74,7 @@
 \chapter*{Acronyms}
 
 \begin{acronym}[UML]
-\acro{LHC}{Large Hadron Collider}
-\acro{IBL}{Insertable B-Layer}
-\acro{MS}{Muon Spectrometer}
-\acro{ID}{Inner Detector}
-\acro{SCT}{Silicon Microstrip Tracker}
-\acro{TRT}{Transition Radiation Tracker}
-\acro{NN}{Neural Network}
-\acro{ToT}{Time Over Threshold}
-\acro{MC}{Monte Carlo simulation}
+%\acro{EG}{Example}
 \end{acronym}  
                    
 \endgroup
