Fixed bug from commenting acronym.

--- a/frontback/Contents.tex
+++ b/frontback/Contents.tex
@@ -74,7 +74,7 @@
 \chapter*{Acronyms}
 
 \begin{acronym}[UML]
-%\acro{EG}{Example}
+\acro{EG}{Example}
 \end{acronym}  
                    
 \endgroup
