Updated roman numberals in table of contents.

--- a/classicthesis.sty
+++ b/classicthesis.sty
@@ -447,7 +447,7 @@
     \ifthenelse{\boolean{@parts}}%
     {%
       \renewcommand{\thepart}{\Roman{part}}%
-      \renewcommand{\cftpartpresnum}{\upshape}
+      \renewcommand{\cftpartpresnum}{\sffamily}
 %      \renewcommand{\cftpartaftersnum}{\cftchapaftersnum}%
 %      \renewcommand{\cftpartaftersnumb}{\quad}%
 %      \setlength{\cftpartnumwidth}{\cftpartnumwidth}
