--- a/frontback/Titlepage.tex
+++ b/frontback/Titlepage.tex
@@ -19,7 +19,7 @@
 
 \includegraphics[width=5cm]{figures/ucberkeleyseal_line_540.eps} \\ \medskip % Seal
 
-\mySubtitle \\ \medskip % Thesis subtitle
+%\mySubtitle \\ \medskip % Thesis subtitle
 %\myDegree \\
 %\myDepartment \\
 %\myFaculty \\
