Filled in intro for ch8, added some references and a standard ATLAS bib.

--- a/axen_thesis.tex
+++ b/axen_thesis.tex
@@ -39,6 +39,7 @@
 \input{classicthesis-config}
 
 \addbibresource{bibliography.bib} % The file housing your bibliography
+\addbibresource{ATLAS.bib} 
 %\addbibresource[label=ownpubs]{Self_Publications.bib} % Uncomment for optional self-publications
 
 %\hyphenation{Put special hyphenation here}
