--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,22 +1,22 @@
 % This file was created with JabRef 2.8.1.
 % Encoding: Cp1252
 
-@BOOK{bringhurst:2002,
-  title = {{T}he {E}lements of {T}ypographic {S}tyle},
-  publisher = {Hartley \& Marks Publishers},
-  year = {2013},
-  author = {Robert Bringhurst},
-  series = {Version 4.0: 20th Anniversary Edition},
-  address = {Point Roberts, WA, USA}
+@article{TopoClusters,
+  author = "{ATLAS Collaboration}",
+  title = "{Topological cell clustering in the ATLAS calorimeters and its performance in LHC Run 1}",
+  eprint = "1603.02934",
+  archivePrefix = "arXiv",
+  primaryClass   = "hep-ex",
+  year = "2016"
 }
-@ARTICLE{knuth:1974,
-  author = {Knuth, Donald E.},
-  title = {{C}omputer {P}rogramming as an {A}rt},
-  journal = {Communications of the ACM},
-  year = {1974},
-  volume = {17},
-  pages = {667--673},
-  number = {12},
-  address = {New York, NY, USA},
-  publisher = {ACM Press}
+@Article{GEANT4,
+     author    = "Agostinelli, S. and others",
+ collaboration = "GEANT4",
+     title     = "{GEANT4: A simulation toolkit}",
+     journal   = "Nucl. Instrum. Meth. A",
+     volume    = "506",
+     year      = "2003",
+     pages     = "250-303",
+     doi       = "10.1016/S0168-9002(03)01368-8",
+     SLACcitation  = "%%CITATION = NUIMA,A506,250;%%"
 }
