More ch08 content

--- a/axen_thesis.tex
+++ b/axen_thesis.tex
@@ -40,6 +40,7 @@
 
 \addbibresource{bibliography.bib} % The file housing your bibliography
 \addbibresource{ATLAS.bib} 
+\addbibresource{eoverp.bib} 
 %\addbibresource[label=ownpubs]{Self_Publications.bib} % Uncomment for optional self-publications
 
 %\hyphenation{Put special hyphenation here}
