Fixed some commands and references, drafted chapter 9.

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -47,7 +47,7 @@
 \newcommand{\myUni}{University of California, Berkeley\xspace}
 \newcommand{\myLocation}{Berkeley, CA\xspace}
 \newcommand{\myTime}{September 2016\xspace}
-\newcommand{\myVersion}{Version 0.18\xspace}
+\newcommand{\myVersion}{Version 0.19\xspace}
 
 %----------------------------------------------------------------------------------------
 %	USEFUL COMMANDS
@@ -60,6 +60,7 @@
 
 \newcommand*{\tsup}[1]{\textsuperscript{#1}}
 \newcommand*{\SM}{Standard Model}
+\newcommand*{\pt}{\ensuremath{p_T}\xspace}
 
 \newcounter{dummy} % Necessary for correct hyperlinks (to index, bib, etc.)
 \providecommand{\mLyX}{L\kern-.1667em\lower.25em\hbox{Y}\kern-.125emX\@}
